Maquetación de la página principal asi como el template, header y footer para que respondan bien a los diferentes tamaños de pantalla.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
 <app-navbar></app-navbar>
-<router-outlet></router-outlet>
+<div class="w-100 pb-5 container main-content-app">
+    <router-outlet></router-outlet>
+</div>
 <app-footer></app-footer>
