--- a/src/app/componentes/home/home.component.html
+++ b/src/app/componentes/home/home.component.html
@@ -1,24 +1,41 @@
-<video autoplay muted loop id="myVideo">
-  <source src="https://mdbootstrap.com/img/video/Tropical.mp4" type="video/mp4">
-  Your browser does not support HTML5 video.
-</video>
-
-<div class="content">
-  <div class="row">
-    <div class="col-2"></div>
-    <div class="col-10"><img src="./assets/logos/exdipa-letra.png" class="img-fluid float-right" alt="exdipa">
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-4"></div>
-    <div class="col-8"><h2 class="mr-5">La Mayor Expo Virtual en el Mundo!</h2>
-      <button type="button" class="btn-sm btn-warning"><i class="fa fa-sign-in" aria-hidden="true"></i> REGISTRARSE
-      </button>
-      <button type="button" class="ml-1 btn-sm btn-info"><i class="fa fa-windows" aria-hidden="true"></i> DESCARGAR
-        WINDOWS
-      </button>
-      <button type="button" class="ml-1 btn-sm btn-info"><i class="fa fa-apple" aria-hidden="true"></i> DESCARGAR MAC
-      </button>
+<div class="row bg-black-content">
+  <div class="col-12 col-sm-12 col-md-10 col-lg-7 mt-4 content">
+    <div class="row content-second">
+      <div class="col-12">
+        <img src="./assets/logos/exdipa-letra.png" class="img-fluid mr-5 img-exdipa-landing" alt="exdipa">
+      </div>
+      <div class="col-12 text-left">
+        <div class="font-subtitle">EXPO DIGITAL PAPELERIA MEXICANA</div>
+      </div>
+      <div class="col-12 mt-2 mb-2">
+        <div class="list-items-landings">
+          <i class="fa fa-star mr-1" aria-hidden="true"></i> <label> Conecta</label>
+          <i class="fa fa-star mr-1 ml-3 d-inline-block" aria-hidden="true"></i> <label> Diversifica </label>
+          <i class="fa fa-star mr-1 ml-3 d-inline-block" aria-hidden="true"></i> <label> Prospera </label>
+        </div>
+      </div>
+      <div class="col-12">
+        <button type="button" class="ml-0 btn btn-sm btn-warning">
+          ¡Bienvenidos!
+        </button>
+        <button type="button" class="ml-2 btn btn-sm btn-info">
+          Descargar <i class="fa fa-cloud-download" aria-hidden="true"></i>
+        </button>
+      </div>
     </div>
   </div>
 </div>
+  <!-- <div class="content">
+    
+  </div> -->
+
+<div class="content-btn mt-4">
+  <button type="button" class="ml-2 btn btn-lg btn-danger btn-block">INICIAR SESIÓN <i class="fa fa-sign-in" aria-hidden="true"></i></button>
+</div>
+
+<!-- <div style="position: relative;">
+  <video autoplay muted loop id="myVideo" class="video-fluid">
+    <source src="https://mdbootstrap.com/img/video/Tropical.mp4" type="video/mp4">
+    Your browser does not support HTML5 video.
+  </video>
+</div> -->
