--- a/src/app/componentes/footer/footer.component.css
+++ b/src/app/componentes/footer/footer.component.css
@@ -1,30 +1,11 @@
-.posicion {
-  position: fixed;
-  min-width: 100% !important;
+.page-footer {
+  height: 90px !important;
+  max-height: 90px !important;
+  background-color: #132239 !important;
 }
 
-img {
-  display: block;
-  max-width: 125%;
-  height: auto;
-  margin-bottom: 1rem;
-}
-
-.zarp {
-  display: block;
-  max-width: 30% !important;
-  height: auto;
-}
-
-.vl {
-  border-left: 1px solid white;
-  height: auto;
-  top: 0;
-  margin-left: 1rem;
-}
-
-.exdipa {
-  display: block;
-  max-width: 80% !important;
-  height: auto;
+@media (max-width: 767px) {
+  .ocultar-movil {
+    display: none !important;
+  }
 }
