--- a/src/app/componentes/footer/footer.component.html
+++ b/src/app/componentes/footer/footer.component.html
@@ -1,59 +1,37 @@
 <!-- Footer -->
-<footer class="page-footer font-small mdb-color darken-3 pt-4 posicion">
+<footer class="page-footer blue font-small pt-3">
   <!-- Footer Links -->
   <div class="container-fluid text-center text-md-left">
-    <!-- Grid row -->
     <div class="row">
-      <!-- Grid column -->
-      <div class="col-6 mt-md-0 mt-2">
+      <div class="col-4 ocultar-movil pt-2" style="border-right: 2px #fff solid;">
         <div class="row">
-          <div class="col-3">
-            <img src="./assets/logos/zarp.png" class="img-fluid ml-5 zarp" alt="www.zarpproductions.com">
-            <a target="_blank" href="https://www.zarpproductions.com">www.zarpproductions.com</a><br>
-            <a href="mailto:contacto@zarpproductions.com">contacto@zarpproductions.com</a>
+          <div class="col-7 col-sm-6 col-md-6 col-lg-7 pt-2 pl-2">
+            <img src="./../../../assets/logos/ph.png" style="width: 80%;" class="ml-3" alt="">
           </div>
-          <div class="vl"></div>
-          <div class="col-2">
-            <img src="./assets/logos/ph.png" class="img-fluid ml-5 mt-3" alt="www.lph.mx">
-            <a class="ml-5" target="_blank" href="https://www.lph.mx/">www.lph.mx</a>
-            <br>
-            <a class="ml-5" href="mailto:contacto@zarpproductions.com">ohernandez@lph.mx</a>
+          <div class="col-5 col-sm-6 col-md-6 col-lg-5 pt-1">
+            <div class="mb-0 w-100">www.lph.mx</div>
+            <div class="w-100">ohernandez@lph</div>
           </div>
         </div>
       </div>
-      <div class="col-1"><img src="./assets/logos/LogoEXDIPA.png" class="img-fluid float-right exdipa" alt="exdipa">
+      <div class="col-4 pt-1 ocultar-movil" style="border-right: 2px #fff solid;">
+        <div class="row">
+          <div class="col-2 col-sm-2 col-md-1 col-lg-2 pt-2">
+            <img src="./../../../assets/logos/zarp.png" style="width: 90%;" alt="">
+          </div>
+          <div class="col-lg-9 col-md-10 pt-1">
+            <p class="mb-0 w-100">www.zarpproductions.com</p>
+            <p class="w-100">contacto@zarpproductions.com</p>
+          </div>
+        </div>
       </div>
-      <!-- Grid column -->
-      <hr class="clearfix w-100 d-md-none pb-3">
-      <!-- Grid column -->
-      <div class="col-md-3 mb-md-0 mb-3">
-        <!-- Links -->
-        <h5 class="text-uppercase">Links</h5>
-
-        <ul class="list-unstyled">
-          <li>
-            <a [routerLink]="['nosotros']">Nosotros</a>
-          </li>
-          <li>
-            <a [routerLink]="['instructivo']">Información</a>
-          </li>
-          <li>
-            <a [routerLink]="['galeria']">Galeria</a>
-          </li>
-          <li>
-            <a>Politicas de Privacidad</a>
-          </li>
-        </ul>
+      <div class="col-12 col-sm-12 col-md-4 col-lg-4">
+        <img src="./../../../assets/logos/exdipa-letra.png" style="width: 15%;margin-top: -5px;" alt="">
+        <p class="mb-0 link w-100">Galeria</p>
+        <p class="mb-0 link w-100">Politicas de privacidad</p>
       </div>
-      <!-- Grid column -->
     </div>
-    <!-- Grid row -->
   </div>
-  <!-- Footer Links -->
-  <!-- Copyright -->
-  <div class="footer-copyright text-center py-3">© 2020 Copyright
-  </div>
-  <!-- Copyright -->
 </footer>
 <!-- Footer -->
 <!--
