--- a/src/app/componentes/galeria/galeria.component.html
+++ b/src/app/componentes/galeria/galeria.component.html
@@ -1,8 +1,6 @@
 <div class="container margen">
-  <h1 class="font-weight-light text-center text-lg-left mt-5 mb-0"></h1>
-
-  <hr class="mt-2 mb-5">
-
+  <h1 class="font-weight-light text-center text-lg-left mb-0">Galeria</h1>
+  <br>
   <div class="row text-center text-lg-left">
 
     <div class="col-lg-3 col-md-4 col-6">
