--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,10 +14,36 @@ body {
   font-size: 16px;
   background-color: #ffffff;
   color: #46484a;
+  background: url(./assets/fondos/ExdipaFondo1.jpg) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 
-@media only screen and (max-width: 768px) {
-  .navbar {
-    background-color: #4285F4;
-  }
+.navbar {
+  background-color: rgba(0,0,0, 0.5);
+}
+
+.navbar .nav-link  {
+  font-size: 0.9rem !important;
+}
+
+.navbar .nav-item {
+  padding-left:1.4rem;
+  padding-right:1.4rem;
+}
+
+.navbar .active .nav-link{
+  background-color: transparent !important;
+  font-weight: bold;
+}
+
+.main-content-app {
+  padding-top: 54px;
+  min-height: calc(100vh - 90px);
+}
+
+.link {
+  cursor: pointer !important;
 }
